# templater

./: .dockerignore  .gitignore  .woodpecker.yaml  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix  rustfmt.toml
.github/workflows/: nix.yaml  release.yaml
src/: cli.rs  main.rs
src/config/: mod.rs
src/consumer/: mod.rs
src/consumer/prometheus/: mod.rs
src/consumer/rfc1035/: mod.rs
src/data/: mod.rs
src/netbox/: mod.rs
src/netbox/data/: common.rs  ip_address.rs  mod.rs  prefix.rs  tenant.rs
src/provider/: mod.rs
src/provider/netbox/: mod.rs
src/provider/netbox/data/: common.rs  ip_address.rs
src/provider/yaml/: mod.rs
templater/: Cargo.toml
templater/src/: main.rs
templater/src/config/: cli.rs  mod.rs
templater/src/consumer/: mod.rs
templater/src/consumer/cloudflare/: mod.rs
templater/src/consumer/cloudflare/data/: batch.rs  mod.rs  record.rs  zone.rs
templater/src/consumer/prometheus/: mod.rs
templater/src/consumer/rfc1035/: mod.rs
templater/src/data/: mod.rs
templater/src/provider/: mod.rs
templater/src/provider/netbox/: mod.rs
templater/src/provider/netbox/data/: ip_address.rs  mod.rs  prefix.rs  site.rs
templater/src/provider/yaml/: mod.rs
templater_macro/: Cargo.toml
templater_macro/src/: lib.rs
