[package]
name = "templater"
version = "0.1.0"
edition = "2024"
authors = ["Herman Andgart <nahfe@nahfe.dev>"]

[dependencies]
clap = { version = "4.5.29", features = ["derive", "env"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_derive = "1.0.217"
log = "0.4.25"
anyhow = "1.0.95"
dotenvy = "0.15.7"
serde_with = "3.12.0"
ipnet = { version = "2.11.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
tldextract = "0.6.0"
serde_yaml = "0.9.34"
