[package]
name = "templater"
version = "0.1.0"
edition = "2024"
authors = ["Herman Andgart <nahfe@nahfe.dev>"]
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.19", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
log = "0.4.27"
anyhow = "1.0.98"
dotenvy = "0.15.7"
serde_with = "3.12.0"
ipnet = { version = "2.11.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tldextract = "0.6.0"
serde_yaml = "0.9.34"
serde-tuple-vec-map = "1.0.1"
zoneparser = "0.1.4"
derive_more = { version = "2.0.1", features = ["display", "from", "try_into"] }
serde-inline-default = "0.2.3"
templater_macro = { path = "../templater_macro" }
